Adds agent labels and box+agent uuid to hashing to help keep them unique